--- a/Previsão de Processamento de Linguagem Natural com modelo lineares.ipynb
+++ b/Previsão de Processamento de Linguagem Natural com modelo lineares.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/nlp.png\" width=\"2000\"/>"
+    "<img src=\"/images/nlp.png\" width=\"2000\"/>"
    ]
   },
   {
